# searchpin

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  MANIFEST.in  MiniSearch.spec  README.md  README_zh.md  app.py  build_app.py  diag_baidu.py  generate_icon.py  glama.json  model_manager.py  package_models.py  proxy.py  pyproject.toml  requirements.txt  search_engine.py  search_server.py  server.json  smithery.yaml  start.sh  test_search_sources.py
.github/workflows/: docker-publish.yml  pypi-publish.yml
.mcp/: server.json
dev/: auto_proxy.py  benchmark-8scene-full-comparison.md  benchmark-cross-env-comparison.md  benchmark-docker-20260621.md  benchmark-domestic-20260622.json  benchmark-domestic-20260622.md  benchmark-host-vpn-20260622.md  benchmark-llm-driven-20260622.md  benchmark-s1-pg18-20260622-173436.json  benchmark-s2-claude-20260622-173517.json  benchmark-s3-gpu-20260622-173726.json  llm_driven_benchmark.py  proxy_patch.py  run_benchmark.py  run_search_server.py
searchpin/: __init__.py  __main__.py  _model_setup.py  backends.py  config.py  engine.py  quality.py  structured_extract.py
tests/: test_backends.py  test_cli.py  test_config.py  test_quality.py
